--- a/bower.json
+++ b/bower.json
@@ -1,15 +1,21 @@
 {
-  "name": "angular-seed",
+  "name": "gofar",
   "description": "A starter project for AngularJS",
   "version": "0.0.0",
   "homepage": "https://github.com/angular/angular-seed",
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "angular": "~1.5.0",
-    "angular-route": "~1.5.0",
-    "angular-loader": "~1.5.0",
-    "angular-mocks": "~1.5.0",
+    "angular": "^1.6.3",
+    "angular-route": "^1.6.3",
+    "angular-loader": "^1.6.3",
+    "angular-mocks": "^1.6.3",
     "html5-boilerplate": "^5.3.0"
+  },
+  "resolutions": {
+    "angular": "^1.6.3",
+    "angular-route": "^1.6.3",
+    "angular-loader": "^1.6.3",
+    "angular-mocks": "^1.6.3"
   }
 }
